--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
